Import from method content

--- a/org.topcased.modeler.ispem.MethodPluginDiagram/build.properties
+++ b/org.topcased.modeler.ispem.MethodPluginDiagram/build.properties
@@ -1,8 +1,13 @@
-bin.includes =	plugin.xml,\
-				.,\
-				icons/,\
-				templates/,\
-				META-INF/
+bin.includes = plugin.xml,\
+               .,\
+               icons/,\
+               templates/,\
+               META-INF/,\
+               owlapi-bin.jar,\
+               resources/pellet-2.3.0/lib/owlapiv3/owlapi-bin.jar
 				
 source.. = src/
 output.. = bin/
+jars.compile.order = .,\
+                     owlapi-bin.jar
+source.owlapi-bin.jar = 
