--- a/org.topcased.modeler.ispem.utils/build.properties
+++ b/org.topcased.modeler.ispem.utils/build.properties
@@ -7,7 +7,6 @@ bin.includes = plugin.xml,\
                resource/owlim/log4j-over-slf4j-1.6.4.jar,\
                resource/owlim/openrdf-sesame-2.6.4-onejar.jar,\
                resource/owlim/owlim-lite-4.3.jar,\
-               resource/owlim/slf4j-api-1.6.4.jar,\
                resource/aterm-java-1.6.jar,\
                resource/owlim/slf4j-jdk14-1.6.4.jar,\
                resource/pellet-2.3.0/lib/antlr/antlr-runtime-3.2.jar,\
@@ -45,4 +44,5 @@ bin.includes = plugin.xml,\
                resource/pellet-2.3.0/lib/pellet-query.jar,\
                resource/pellet-2.3.0/lib/pellet-rules.jar,\
                resource/pellet-2.3.0/lib/pellet-test.jar,\
-               resource/pellet-2.3.0/lib/servlet.jar
+               resource/pellet-2.3.0/lib/servlet.jar,\
+               resource/owlim/slf4j-api-1.6.4.jar
